# pam_script

./: .cvsignore  .ftp.sf  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  cvs2cl.pl  pam-script.7.in  pam-script.spec.in  pam_script.c  pam_script.spec
config/: .README
debian/: .cvsignore  README.Debian  README.source  changelog  control  copyright  dirs  libpam-script.dirs  libpam-script.docs  libpam-script.examples  libpam-script.links  libpam-script.manpages  pam-script-examples.dirs  pam-script-examples.install  pam-script-module.dirs  pam-script-module.install  pam-script.7.in  postinst  prerm  rules  script  watch
etc/: README  README.examples  README.pam_script  logscript  pam_script  tally
